[package]
name = "rckad"
version = "0.0.6"
authors = ["Sun <huachuang20@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Efficient and flexible S/Kademlia implementation."
repository = "https://github.com/rust-cc/rckad"
keywords = ["Kademlia"]
license = "MIT/Apache-2.0"

[dependencies]
serde = "1"
bincode = "1"
bit-vec = { version = "0.6", default-features = false }
sha3 = "0.8"
