[package]
name = "rckad"
version = "0.1.0"
authors = ["Sun <huachuang20@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Efficient and flexible Kademlia implementation."
repository = "https://github.com/rust-cc/rckad"
keywords = ["Kademlia"]
license = "MIT/Apache-2.0"

[dependencies]
serde = { version = "1", default-features = false, features = ["alloc"] }
postcard = { version = "0.5", default-features = false, features = ["alloc"] }
bit-vec = { version = "0.6", default-features = false }
blake3 = { version = "0.3", default-features = false }
